Rename naturalEvents.map to naturalEvents.markers and refactor

--- a/web/index.html
+++ b/web/index.html
@@ -255,7 +255,7 @@
     <!-- link.dev --> <script type="text/javascript" src="js/naturalEvents/wv.naturalEvents.request.js"></script>
     <!-- link.dev --> <script type="text/javascript" src="js/naturalEvents/wv.naturalEvents.model.js"></script>
     <!-- link.dev --> <script type="text/javascript" src="js/naturalEvents/wv.naturalEvents.ui.js"></script>
-    <!-- link.dev --> <script type="text/javascript" src="js/naturalEvents/wv.naturalEvents.map.js"></script>
+    <!-- link.dev --> <script type="text/javascript" src="js/naturalEvents/wv.naturalEvents.markers.js"></script>
 
     <!-- link.dev --> <script type="text/javascript" src="js/map/wv.map.js"></script>
     <!-- link.dev --> <script type="text/javascript" src="js/map/wv.map.model.js"></script>
