Add function to filter events list
Still buggy on reload and tab switching

--- a/web/index.html
+++ b/web/index.html
@@ -294,7 +294,7 @@
               <div id="wv-events"></div>
               <div id="wv-data"></div>
               <footer>
-                <button id="layers-add" class="action">+ Add Layers</button>
+                <button id="layers-add" class="action footer-content">+ Add Layers</button>
               </footer>
             </section>
             <div id="wv-map" class="wv-map"></div>
