Fix tab footer layout and behavior

--- a/web/index.html
+++ b/web/index.html
@@ -289,13 +289,10 @@
             <a href="/" title="Click to Reset Worldview to Defaults" id="wv-logo"></a>
             <section id="productsHolder">
               <ul id="productsHolder-tabs"></ul>
-              <div id="productsHoldertoggleButtonHolder"></div> <!-- bad -->
+              <div id="productsHoldertoggleButtonHolder"></div>
               <main id="products"></main>
               <div id="wv-events"></div>
               <div id="wv-data"></div>
-              <footer>
-                <button id="layers-add" class="action footer-content">+ Add Layers</button>
-              </footer>
             </section>
             <div id="wv-map" class="wv-map"></div>
             <div id="eventsHolder"></div>
