Add loading indicators for tabs
In some situations, slow networks can make it appear that there is nothing in the tab, so adding text to the empty tab shows users that something should be coming

--- a/web/index.html
+++ b/web/index.html
@@ -290,9 +290,9 @@
             <section id="productsHolder">
               <ul id="productsHolder-tabs"></ul>
               <div id="productsHoldertoggleButtonHolder"></div>
-              <main id="products"></main>
-              <div id="wv-events"></div>
-              <div id="wv-data"></div>
+              <main id="products">Loading...</main>
+              <div id="wv-events">Loading...</div>
+              <div id="wv-data">Loading...</div>
             </section>
             <div id="wv-map" class="wv-map"></div>
             <div id="eventsHolder"></div>
