Polyfill SVG features for IE11

--- a/web/index.html
+++ b/web/index.html
@@ -107,6 +107,8 @@
     <!-- External libraries =============================================== -->
     <!-- link.dev  -->      <script type="text/javascript" src="ext/node_modules/babel-polyfill/dist/polyfill.js"></script>
     <!-- link.prod --> <!-- <script type="text/javascript" src="ext/node_modules/babel-polyfill/dist/polyfill.min.js"></script> -->
+    <!-- link.dev  -->      <script type="text/javascript" src="ext/node_modules/svg4everybody/dist/svg4everybody.js"></script>
+    <!-- link.prod --> <!-- <script type="text/javascript" src="ext/node_modules/svg4everybody/dist/svg4everybody.min.js"></script> -->
     <!-- link.dev  -->      <script type="text/javascript" src="ext/node_modules/react/dist/react.js"></script>
     <!-- link.prod --> <!-- <script type="text/javascript" src="ext/node_modules/react/dist/react.min.js"></script> -->
 
